nginx-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: nginx
  name: nginx-pod
  namespace: ingress-lab
spec:
  # subdomain: nginx-pod-ingress-lab
  port:
    targetPort: 8080
  to:
    kind: Service
    name: nginx-pod
  tls:
    termination: edge
  # wildcardPolicy: None
